# zapret-ui

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  PLAN.md  README.md  SECURITY.md  build.rs  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
assets/: app.manifest
docs/: RELEASING.md
examples/: ui_only.rs
src/: app.rs  config.rs  contracts.rs  i18n.rs  lib.rs  log.rs  main.rs  notify.rs  ports.rs  self_update.rs  selfupdate.rs  single_instance.rs  state.rs  tray.rs  winenv.rs  winicon.rs
src/app/: mod.rs  ui_models.rs  winexec.rs
src/locales/: en.json  ru.json
src/zapret/: batparse.rs  catalog.rs  elevation.rs  github.rs  installer.rs  maintenance.rs  mod.rs  paths.rs  process.rs  service.rs  strategies.rs  tester.rs  updater.rs  winbundle.rs
tests/: catalog_tests.rs  config_tests.rs  process_tests.rs
tools/: extract_strategies.rs
ui/: i18n.slint  main_window.slint  tokens.slint
ui/components/: admin_banner.slint  brand_mark.slint  button.slint  hosts_dialog.slint  icon.slint  input.slint  mode_toggle.slint  power_dial.slint  segmented.slint  spinner.slint  star.slint  status_dot.slint  switch.slint  update_banner.slint
ui/pages/: about.slint  home.slint  logs.slint  settings.slint  simple.slint  strategies.slint  tester.slint
