[package]
name = "zapret-ui"
version = "0.1.0"
edition = "2021"
description = "Native Windows GUI for the zapret DPI-bypass core (Flowseal/zapret-discord-youtube)."
authors = ["meldxkviel"]
license = "MIT"
repository = "https://github.com/meldxkviel/zapret-ui"
homepage = "https://github.com/meldxkviel/zapret-ui"
readme = "README.md"

[lib]
name = "zapret_ui"
path = "src/lib.rs"


[dependencies]
slint = { version = "1.8", features = ["backend-winit", "renderer-skia"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
zip = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
windows-service = "0.8"
sysinfo = "0.32"
semver = "1"
sha2 = "0.11"
tray-icon = "0.24"
tempfile = "3"
clipboard-win = "5"
tauri-winrt-notification = "0.7"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[build-dependencies]
slint-build = "1.8"
winresource = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

